	  complete and verified for the STM32 platform.

6.24 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/src/stm32:  Support for STM32F100 high density chips
	  added by Freddie Chopin.
	* configs/stm32f100_generic:  Support for generic STM32F100RC board
	  contributed by Freddie Chopin.
	* arch/arm/src/stm32_otgfsdev.c:  Partial fix from Petteri Aimonen.
	* drivers/lcd/ug-2864ambag01.c and include/nuttx/lcd/ug_2864ambag01.h:
	  LCD driver for the Univision OLED of the same name (untested on
	  initial check-in).
	* configs/stm32f4discovery/nxlines:  Configure to use mconf/Kconfig
	  tool.
	* configs/stm32f4discovery/src/up_ug2864ambag01.c:  Board-specific
	  initialization for UG-2864AMBAG01 OLED connecte to STM32F4Disovery.
	* libxx/libxx_stdthrow.cxx:  Exception stubs from Petteri Aimonen.
	* configs/stm32f4discovery/src/up_ug2864ambag01.c: Driver has been
	  verified on the STM32F4Discovery platform.  Some tuning of the
	  configuration could improve the presentation.  Lower resolution displays
	  are also more subject to the "fat, flat line bug" that I need to fix
	  someday.  See http://www.nuttx.org/doku.php?id=wiki:graphics:nxgraphics
	  for a description of the fat, flat line bug.
	* libc:  Renamed nuttx/lib to nuttx/libc to make space for a true lib/
	  directory that will be forthcoming.  Also rename libraries:  liblib.a -> libc.a,
	  libulib.a -> libuc.a, libklib.a -> libkc.a, liblibxx.a ->libcxx.a.
	  (I will probably, eventually rename libxx to libcxx for consistency)
	* Makefile, lib/: A new, empty directory that will hold generated libraries.
	  This simplifies the library patch calculations and lets me get rid of some
	  bash logic.  The change is functional, but only partially complete;
	  additional logic is needed in the arch/*/src/Makefile's as well.  Right
	  now that logic generate multiple library paths, all pointing to the lib/
	  directory.
	* arch/*/src/Makefile:  Now uses only the libraries in lib/
